client/css: fix clipped input text

--- a/client/css/forms.styl
+++ b/client/css/forms.styl
@@ -153,8 +153,8 @@ input[type=email],
 input[type=password]
     font-family: 'Droid Sans', sans-serif
     font-size: 100%
-    line-height: 100%
-    padding: 0.3em
+    line-height: 150%
+    padding: 0 0.3em
     text-overflow: ellipsis
     width: 100%
     box-sizing: border-box
@@ -192,8 +192,8 @@ input[type=button],
 input[type=submit]
     cursor: pointer
     font-size: 100%
-    line-height: 100%
-    padding: 0.3em 0.7em
+    line-height: 150%
+    padding: 0 0.7em
     border: 2px solid $button-enabled-background-color
     background: $button-enabled-background-color
     color: $button-enabled-text-color
